# poly66_AMM

./: .gitignore  CLAUDE.md  CODE_REVIEW_2026-03-05.md  README.md  pyproject.toml
.github/workflows/: ci.yml
Implementation_Plan/: 2026-02-28-amm-bot-design.md  2026-02-28-amm-bot-plan.md  2026-02-28-amm-prerequisites-design.md  2026-02-28-amm-prerequisites-plan.md
Testing_Plan/: Issue-Tracker.md  Phase-7-8-9-Implementation-Plan.md
config/: oracle.yaml
docs/: layer4-preflight.md
docs/plans/: 2026-03-05-amm-phase9-security-design.md  2026-03-05-amm-phase9-security.md  2026-03-06-fix-types-config.md  2026-03-06-r2c-connector-oracle.md  2026-03-06-r2d-lifecycle-cache.md  2026-03-06-r3-combined-report.md  2026-03-06-r3-review-prompt.md  2026-03-06-r3r4-p0-fixes.md  2026-03-06-r4-combined-report.md  2026-03-06-testing-strategy.md  2026-03-08-simulation-layer3-final.md
docs/review/: 2026-03-08-agent-c-analysis.md  2026-03-08-agent-c-pr-body.md  2026-03-08-group-a-review.md  2026-03-08-group-b-review.md
memory/: test-results-final.md
reports/e2e/: 2026-03-09-fed-round2-summary.md  2026-03-09-round2-btc-risk-control-summary.md  layer4-e2e-results-tracker.md
scripts/: preflight.py
src/amm/: main.py
tests/e2e/: __init__.py  run_e2e.py  test_btc_lane.py  test_fed_market_e2e.py
tests/integration/: test_amm_phase7_funds.py  test_amm_phase8_oracle.py  test_amm_phase9_race_conditions.py  test_amm_phase9_rate_limit.py  test_amm_phase9_security.py  test_preflight.py
tests/property/: test_boundary.py  test_invariants.py
tests/simulation/: __init__.py  conftest.py  helpers.py  test_conftest_smoke.py  test_sim_01_normal_cycle.py  test_sim_02_oracle_deadlock.py  test_sim_03_widen_defense.py  test_sim_04_kill_stops_quotes.py  test_sim_05_tau_zero.py  test_sim_06_startup_integrity.py  test_sim_07_restart_recovery.py  test_sim_08_oracle_lag_recovery.py  (+1 more)
(+125 files in other folders)
